--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "cloudglue"
 version = "0.1.0"
-description = "Python SDK for CloudGlue API"
+description = "Python SDK for Cloudglue API"
 readme = "README.md"
 requires-python = ">=3.10"
 license = {text = "Elastic License 2.0"}
