--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "cloudglue"
-version = "0.0.16"
-description = "Python SDK for CloudGlue API"
+version = "0.1.0"
+description = "Python SDK for Cloudglue API"
 readme = "README.md"
 requires-python = ">=3.10"
 license = {text = "Elastic License 2.0"}
